tests/snapshots/snapshot_test__pretool_creates_precommit.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  
○  jjagent: session test-ses

Claude-session-id: test-session-12345678

Added regular file test.txt:
        1: hello world
◆
