tests/snapshots/snapshot_test__session_change_exists.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  uwc

○  jjagent: session detect-t

Claude-session-id: detect-test-12345678

○  base

◆
