tests/snapshots/snapshot_test__split_change_basic.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  commit1

Added regular file file1.txt:
        1: content1
○  jjagent: session split-ba pt. 2

Claude-session-id: split-basic-12345678

○  uwc

○  base

○  jjagent: session split-ba

Claude-session-id: split-basic-12345678

◆
