tests/snapshots/snapshot_test__split_change_with_session.snap
---
source: tests/snapshot_test.rs
assertion_line: 2004
expression: snapshot
---
@  commit on session

Added regular file session_file.txt:
        1: session content
○  jjagent: session split-te pt. 2

Claude-session-id: split-test-12345678

○  uwc

○  base

○  jjagent: session split-te

Claude-session-id: split-test-12345678

◆
