tests/snapshots/snapshot_test__stop_finalizes_interrupted.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  uwc

○  jjagent: session interrup

Claude-session-id: interrupted-session-12345678

Added regular file interrupted.txt:
        1: interrupted work
○  base

◆
